--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "sass": "^1.79.2"
+    "react-intersection-observer": "^9.13.1",
+    "react-slick": "^0.30.2",
+    "sass": "^1.79.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
